made it so only real words can be guessed. And made the new word button closer to the corner to fix a overlap issue on phones.

--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,7 @@
 .newWord {
   all: unset;
   position: fixed;
-  padding: 30px;
+  padding: 15px;
   transition: scale 0.15s ease-in, color 0.15s ease-in;
   color: var(--text)
 }
