--- a/src/board.css
+++ b/src/board.css
@@ -1,3 +1,12 @@
+@keyframes shake {
+    0%   { translate: 0 0; }
+    20%  { translate: -8px 0; }
+    40%  { translate: 8px 0; }
+    60%  { translate: -8px 0; }
+    80%  { translate: 8px 0; }
+    100% { translate: 0 0; }
+}
+
 .board {
     display: flex;
     flex-direction: column;
@@ -62,4 +71,8 @@
     width: 70px;
     height: 70px;
     margin: 1%;
+}
+
+.shake {
+    animation: shake 0.5s ease;
 }
